fix: GPS location on map page
